[metadata]
name = caverage_social_backend
description = Backend of Caverage Social
version = file: __init__.py
url = https://github.com/caverage/Caverage-Social-Backend
keywords =
  social
classifiers =
  Development Status :: 1 - Planning
  Framework :: Django   
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)   
  Natural Language :: English   
  Programming Language :: Python :: 3.8
  Operating System :: POSIX :: Linux
  Topic :: Communications
  Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Message Boards
  Typing :: Typed
long_description = file: README.md
long_description_content_type = text/markdown
#license_files =
  LICENSE.txt

[options]
python_requires = 3.8
setup_requires =
  setuptools >= 40.6
  pip >= 10
packages = find:
zip_safe: false
scripts =
install_requires =
  django

[options.extras_require]
tests =
  pytest
  pytest-cov
  black
  pylint
  mypy
  isort

[options.entry_points]
console_scripts =
#  foo

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
