[metadata]
name = caverage_social_backend
description = Backend of Caverage Social
version = 0.0.1
url = https://github.com/caverage/Caverage_Social_Backend
keywords =
  social
classifiers =
  Development Status :: 1 - Planning
  Framework :: Django
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Natural Language :: English
  Programming Language :: Python :: 3.8
  Operating System :: POSIX :: Linux
  Topic :: Communications
  Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Message Boards
  Typing :: Typed
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = ~=3.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
packages = find:
zip_safe: false
scripts =
install_requires =
  wheel
  django
  ; django-stubs
  djangorestframework
  ; djangorestframework-stubs
  django-oauth-toolkit

[options.extras_require]
tests =
  pytest
  pytest-cov
  black
  pylint
  mypy
  isort

[options.entry_points]
console_scripts =
#  foo

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

# Global options:

[mypy]
python_version = 3.8
warn_unused_configs = True
warn_redundant_casts = True
; plugins =
;     mypy_django_plugin.main
;     mypy_drf_plugin.main
;
; [mypy.plugins.django-stubs]
; django_settings_module = caverage_social_backend.settings

# Per-module options:
[mypy-caverage_social_backend.*]
disallow_any_unimported = True
disallow_any_expr = True
disallow_any_decorated = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unused_ignores = True
no_implicit_optional = True
strict_optional = True

[mypy-tests.*]
ignore_errors = True

; [mypy-setuptools.*]
; ignore_missing_imports = True
